--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://ostin:pass@cluster0.vqgrh0z.mongodb.net/test"
+NEXTAUTH_SECRET= "NEXTAUTH_SECRET"
+
+GITHUB_ID= 9a8207e3cc92a969a64a
+GITHUB_SECRET=2c4d990e946be1bc4d89ee4889695f68e8a22a9a
+
+GOOGLE_CLIENT_ID=553738111092-vnume37cashcuhnuhk35qm1ka05dlv38.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
