--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.7",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
