--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET=2c4d990e946be1bc4d89ee4889695f68e8a22a9a
 
 GOOGLE_CLIENT_ID=553738111092-vnume37cashcuhnuhk35qm1ka05dlv38.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME =dockqzqje
