--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
     "@tailwindcss/forms": "^0.5.5",
@@ -25,6 +26,7 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "next-cloudinary": "^4.20.0",
     "next-superjson-plugin": "^0.5.9",
     "postcss": "8.4.28",
     "react": "18.2.0",
