--- a/.env
+++ b/.env
@@ -14,3 +14,8 @@ GOOGLE_CLIENT_ID=553738111092-vnume37cashcuhnuhk35qm1ka05dlv38.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME =dockqzqje
+
+NEXT_PUSHER_PUBLIC_APP_KEY="e4e534ae088816594f1e"
+PUSHER_APP_ID="1664311"
+PUSHER_SECRET="d811ee5ba416ea05adba"
+
